--- a/Sistema/Interface/Pages/Login/login.html
+++ b/Sistema/Interface/Pages/Login/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../../Public/css/login.css">
 </head>
 <body>
     <div class="container">
@@ -26,7 +26,7 @@
                     </div>
                     <div class="criar-conta">
                         <p>
-                            Não possui conta? <a href="#">Crie uma aqui</a>
+                            Não possui conta? <a href="../CriarConta/criarconta.html">Crie uma aqui</a>
                         </p>
                     </div>
                 </div>
