--- a/Sistema/Interface/Pages/PagesGerente/Home/homegerente.html
+++ b/Sistema/Interface/Pages/PagesGerente/Home/homegerente.html
@@ -25,7 +25,7 @@
                         <button>Negócios</button>
                     </div>
                     <div class="logoff">
-                        <button>Log Off</button>
+                        <a href="../../Login/login.html" class="btn-logoff">Log Off</a>
                     </div>
                 </div>
             </div>
