subindo localstorage para guardar informacoes do usuario

--- a/Sistema/Interface/Pages/PagesUsuario/Home/homeusuario.html
+++ b/Sistema/Interface/Pages/PagesUsuario/Home/homeusuario.html
@@ -14,7 +14,9 @@
                 <button class="meu-perfil">
                     <img src="../../../Public/image/usuario.png" alt="img-usuario" height="70em">
                 </button>
-                <h1>Usuario 1</h1>
+                <h1 id="nm-user">
+                    <!-- Nome do usuario -->
+                </h1>
             </div>
         </div>
         <div class="container">
@@ -32,7 +34,7 @@
                         <button>Feedback</button>
                     </div>
                     <div class="logoff">
-                        <a href="../../Login/login.html" class="btn-logoff">Log Off</a>
+                        <button id="btn-logoff" class="btn-logoff">Log Off</button>
                         <a href="#">Sobre a empresa</a>
                     </div>
                 </div>
@@ -43,5 +45,6 @@
             <div class="incorporacao">&copy;TestCars Inc. 2022</div>
         </footer>
     </div>
+    <script src="./homeusuario.js" type="module"></script>
 </body>
 </html>
