--- a/Sistema/Interface/Pages/Login/login.html
+++ b/Sistema/Interface/Pages/Login/login.html
@@ -20,9 +20,9 @@
             <div class="bloco-formulario">
                 <div class="formulario" name="Formulario">
                     <div class="entradas">
-                        <input type="text" placeholder="Email" class="inputs">
-                        <input type="text" placeholder="Senha" class="inputs">
-                        <button class="btn-login">Entrar</button>
+                        <input type="text" placeholder="Email" class="inputs" id="inpEmail">
+                        <input type="password" placeholder="Senha" class="inputs" id="inpSenha">
+                        <button class="btn-login" id="btnLogin">Entrar</button>
                     </div>
                     <div class="criar-conta">
                         <p>
@@ -41,5 +41,7 @@
             </div>
         </footer>
     </div>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="../../Public/javascript/login.js" type="module"></script>
 </body>
 </html>
