--- a/Sistema/Interface/Pages/PagesGerente/Home/homegerente.html
+++ b/Sistema/Interface/Pages/PagesGerente/Home/homegerente.html
@@ -25,7 +25,7 @@
                         <button>Negócios</button>
                     </div>
                     <div class="logoff">
-                        <a href="../../Login/login.html" class="btn-logoff">Log Off</a>
+                        <button id="btn-logoff" class="btn-logoff">Log Off</button>
                     </div>
                 </div>
             </div>
@@ -41,5 +41,6 @@
             </footer>
         </div>
     </div>
+    <script src="./homegerente.js" type="module"></script>
 </body>
 </html>
