--- a/Sistema/Interface/Pages/CriarConta/criarconta.html
+++ b/Sistema/Interface/Pages/CriarConta/criarconta.html
@@ -32,16 +32,16 @@
             <div class="bloco-form">
                 <div class="formulario">
                     <div class="bloco-email">
-                        <input type="text" placeholder="Email" class="entradas-usuario">
-                        <input type="text" placeholder="Nome de Usuario" class="entradas-usuario">
-                        <input type="date" class="data-usuario">
+                        <input type="text" id="inp-email" placeholder="Email" class="entradas-usuario">
+                        <input type="text" id="inp-usuario" placeholder="Nome de Usuario" class="entradas-usuario">
+                        <input type="date" id="inp-nasc" class="data-usuario">
                     </div>
                     <div class="bloco-senha">
-                        <input type="text" placeholder="Senha" class="senha-usuario">
-                        <input type="text" placeholder="Confirmar senha" class="senha-usuario">
+                        <input type="password" id="inp-senha" placeholder="Senha" class="senha-usuario">
+                        <input type="password" id="inp-confirmar-senha" placeholder="Confirmar senha" class="senha-usuario">
                     </div>
                     <div class="bloco-btn-criar">
-                        <button class="btn-criar">Criar conta</button>
+                        <button id="btn-criar-conta" class="btn-criar">Criar conta</button>
                         <span>Ao criar a conta você concorda com os <a href="../Termos/termoscondicoes.html">Termos e condições</a></span>
                     </div>
                 </div>
@@ -56,5 +56,7 @@
             </div>
         </footer>
     </div>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="../../Public/javascript/criarconta.js" type="module"></script>
 </body>
 </html>
