subindo funcionalidade voltar tela-Agendar

--- a/Sistema/Interface/Pages/Agendar/agendar.html
+++ b/Sistema/Interface/Pages/Agendar/agendar.html
@@ -13,20 +13,20 @@
             <div class="container-formulario">
                 <div class="bloco-form">
                     <div class="bloco-inputs">
-                        <input type="text" class="entrada" placeholder="Nome completo">
-                        <input type="text" class="entrada" placeholder="RG">
+                        <input type="text" id="nome-cliente" class="entrada" placeholder="Nome completo">
+                        <input type="text" id="rg-cliente" class="entrada" placeholder="RG">
                     </div>
                     <div class="bloco-inputs">
-                        <input type="text" class="entrada" placeholder="Endereço">
-                        <input type="text" class="entrada" placeholder="CNH">
+                        <input type="text" id="endereco-cliente" class="entrada" placeholder="Endereço">
+                        <input type="text" id="cnh-cliente" class="entrada" placeholder="CNH">
                     </div>
                     <div class="bloco-inputs">
-                        <input type="text" class="entrada" placeholder="Telefone">
-                        <input type="text" class="entrada" placeholder="CPF">
+                        <input type="text" id="telefone-cliente" class="entrada" placeholder="Telefone">
+                        <input type="text" id="cpf-cliente" class="entrada" placeholder="CPF">
                     </div>
                     <div class="bloco-inputs">
-                        <input type="text" class="entrada" placeholder="Celular">
-                        <input type="datetime-local" class="entrada">
+                        <input type="text" id="celular-cliente" class="entrada" placeholder="Celular">
+                        <input type="datetime-local" id="datatest-cliente" class="entrada">
                     </div>
                     <div class="bloco-inputs">
                         <select class="select" id="escolherModelo">
@@ -37,14 +37,14 @@
                         </select>
                     </div>
                     <div class="container-agendar">
-                        <button class="btn-agendar">Agendar</button>
+                        <button class="btn-agendar" id="btn-agendar">Agendar</button>
                     </div>
                 </div>
                 <div class="container-info-carro">
                     <div class="info-carro">
                         <h2>Informações do Carro:</h2>
                         <div class="container-voltar">
-                            <a href="#" class="button-voltar">
+                            <a href="#" id="btn-voltar" class="button-voltar">
                                 <img src="../../Public/image/arrow-left.png" alt="voltar" height="30em">
                             </a>
                         </div>
@@ -133,5 +133,6 @@
         </footer>
     </div>
     <script src="../../Public/javascript/agendar.js" type="module"></script>
+    <script src="../../Public/javascript/informacoescarro.js" type="module"></script>
 </body>
 </html>
