--- a/Sistema/Interface/Pages/PagesGerente/Home/homegerente.html
+++ b/Sistema/Interface/Pages/PagesGerente/Home/homegerente.html
@@ -19,10 +19,10 @@
             <div class="container-eventos">
                 <div class="bloco-eventos">
                     <div class="eventos">
-                        <button>Agendar</button>
-                        <button>Avaliações</button>
-                        <button>Consultar agendamentos</button>
-                        <button>Negócios</button>
+                        <a href="../../Agendar/agendar.html">Agendar</a>
+                        <a href="#">Avaliações</a>
+                        <a href="#">Consultar agendamentos</a>
+                        <a href="#">Negócios</a>
                     </div>
                     <div class="logoff">
                         <button id="btn-logoff" class="btn-logoff">Log Off</button>
