--- a/Sistema/Interface/Pages/PagesUsuario/Home/homeusuario.html
+++ b/Sistema/Interface/Pages/PagesUsuario/Home/homeusuario.html
@@ -29,9 +29,9 @@
             <div class="container-funcionalidades">
                 <div class="funcionalidades">
                     <div class="container-eventos">
-                        <button>Agendar</button>
-                        <button>Meus agendamentos</button>
-                        <button>Feedback</button>
+                        <a href="../../Agendar/agendar.html">Agendar</a>
+                        <a href="#">Meus agendamentos</a>
+                        <a href="#">Feedback</a>
                     </div>
                     <div class="logoff">
                         <button id="btn-logoff" class="btn-logoff">Log Off</button>
