--- a/Sistema/Interface/Pages/Termos/termoscondicoes.html
+++ b/Sistema/Interface/Pages/Termos/termoscondicoes.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Termos e Condições</title>
     <link rel="stylesheet" href="../../Public/css/termoscondicoes.css">
+    <link rel="shortcut icon" href="../../Public/image/traffic-jam.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
