implementando funcionalidade consultar-agendamentos

--- a/Sistema/Interface/Pages/PagesGerente/Home/homegerente.html
+++ b/Sistema/Interface/Pages/PagesGerente/Home/homegerente.html
@@ -22,7 +22,7 @@
                     <div class="eventos">
                         <a href="../../Agendar/agendar.html">Agendar</a>
                         <a href="#">Avaliações</a>
-                        <a href="#">Consultar agendamentos</a>
+                        <a href="../ConsultarAgendamentos/consultaragendamentos.html">Consultar agendamentos</a>
                         <a href="#">Negócios</a>
                     </div>
                     <div class="logoff">
