--- a/Sistema/Interface/Pages/PagesGerente/ConsultarAgendamentos/consultaragendamentos.html
+++ b/Sistema/Interface/Pages/PagesGerente/ConsultarAgendamentos/consultaragendamentos.html
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <div class="bloco-btn-voltar">
-                        <a href="#" class="btn-voltar">
+                        <a href="../Home/homegerente.html" class="btn-voltar">
                             <img src="../../../Public/image/arrow-left.png" alt="voltar" height="40em">
                         </a>
                     </div>
@@ -58,11 +58,11 @@
                                     <th></th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr class="registros">
+                            <tbody id="registros">
+                                <!-- <tr class="registros">
                                     <td>Fabio</td>
                                     <td>hb20</td>
-                                    <td>22/12 ás 15:30</td>
+                                    <td>15:30 ás 22/12</td>
                                     <td>false</t/d>
                                     <td>false</td>
                                     <td>
@@ -70,7 +70,7 @@
                                             Detalhes
                                         </a>
                                     </td>
-                                </tr>
+                                </tr> -->
                             </tbody>
                         </table>
                     </div>
@@ -86,5 +86,6 @@
             </div>
         </footer>
     </div>
+    <script src="./consultar.js" type="module"></script>
 </body>
 </html>
