adicionando filtro agendamentos-concluidos e nao-concluidos

--- a/Sistema/Interface/Pages/PagesGerente/ConsultarAgendamentos/consultaragendamentos.html
+++ b/Sistema/Interface/Pages/PagesGerente/ConsultarAgendamentos/consultaragendamentos.html
@@ -35,12 +35,12 @@
                 </div>
                 <div class="bloco-eventos">
                     <div class="agendamentos-concluidos">
-                        <button class="btn-concluidos">
+                        <button class="btn-concluidos" id="btn-concluido">
                             Agendamentos concluídos
                         </button>
                     </div>
                     <div class="agendamentos-nao-realizados">
-                        <button class="btn-nao-concluidos">
+                        <button class="btn-nao-concluidos" id="btn-nao-concluido">
                             Agendamentos não concluídos
                         </button>
                     </div>
