--- a/Sistema/Interface/Pages/PagesUsuario/Home/homeusuario.html
+++ b/Sistema/Interface/Pages/PagesUsuario/Home/homeusuario.html
@@ -31,7 +31,7 @@
                 <div class="funcionalidades">
                     <div class="container-eventos">
                         <a href="../../Agendar/agendar.html">Agendar</a>
-                        <a href="#">Meus agendamentos</a>
+                        <a href="../ConsultarAgendamentos/consultaragendamentos.html">Meus agendamentos</a>
                         <a href="#">Feedback</a>
                     </div>
                     <div class="logoff">
