implementando filtro buscar por nome consultar-agendamentos

--- a/Sistema/Interface/Pages/PagesGerente/ConsultarAgendamentos/consultaragendamentos.html
+++ b/Sistema/Interface/Pages/PagesGerente/ConsultarAgendamentos/consultaragendamentos.html
@@ -15,14 +15,14 @@
                 <div class="bloco-filtros">
                     <div class="inputs-filtro">
                         <div class="filtro">
-                            <input type="text" placeholder="Buscar por nome">
-                            <button class="btn-pesquisar">
+                            <input type="text" placeholder="Buscar por nome" id="inp-nome">
+                            <button class="btn-pesquisar" id="btn-pesquisar-nome">
                                 <img src="../../../Public/image/search.png" alt="pesquisar" height="35em">
                             </button>
                         </div>
                         <div class="filtro">
-                            <input type="text" class="filtro" placeholder="Buscar por CPF">
-                            <button class="btn-pesquisar">
+                            <input type="text" placeholder="Buscar por CPF" id="inp-cpf">
+                            <button class="btn-pesquisar" id="btn-pesquisar-cpf">
                                 <img src="../../../Public/image/search.png" alt="pesquisar" height="35em">
                             </button>
                         </div>
@@ -86,6 +86,7 @@
             </div>
         </footer>
     </div>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="./consultar.js" type="module"></script>
 </body>
 </html>
