subindo tela sobre-empresa]

--- a/Sistema/Interface/Pages/PagesUsuario/Home/homeusuario.html
+++ b/Sistema/Interface/Pages/PagesUsuario/Home/homeusuario.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class="logoff">
                         <button id="btn-logoff" class="btn-logoff">Log Off</button>
-                        <a href="#">Sobre a empresa</a>
+                        <a href="../Sobre/sobreempresa.html">Sobre a empresa</a>
                     </div>
                 </div>
             </div>
