--- a/Sistema/Interface/Pages/PagesGerente/DetalhesTestDrive/detalhestestdrive.html
+++ b/Sistema/Interface/Pages/PagesGerente/DetalhesTestDrive/detalhestestdrive.html
@@ -18,7 +18,7 @@
                             <h1>Detalhes:</h1>
                         </div>
                         <div class="container-btn-voltar">
-                            <a href="../ConsultarAgendamentos/consultaragendamentos.html" class="btn-voltar">
+                            <a href="../ConsultarAgendamentos/consultaragendamentos.html" id="btn-voltar" class="btn-voltar">
                                 <img src="../../../Public/image/arrow-left.png" alt="voltar" height="40em">
                             </a>
                         </div>
