subindo tela atualizar-conta

--- a/Sistema/Interface/Pages/PagesUsuario/MinhaConta/minhaconta.html
+++ b/Sistema/Interface/Pages/PagesUsuario/MinhaConta/minhaconta.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,9 +17,9 @@
                         <div class="bloco-edit-user">
                             <div class="bloco-user">
                                 <h1>Bruno Gomes</h1>
-                                <button class="btn-configuracoes">
+                                <a href="../EditarConta/editconta.html" class="link-configuracoes">
                                     <img src="../../../Public/image/configuracoes.png" height="35em" alt="editar conta">
-                                </button>
+                                </a>
                             </div>
                             <div class="bloco-voltar">
                                 <button class="btn-voltar">
@@ -36,16 +36,16 @@
                                 <input type="date" class="inpnascimento" id="dtnascimento">
                             </div>
                             <div class="bloco-ultimologin">
-                                <strong>Ultimo login:</strong>
-                                <span style="margin-left: 2%;">01/01/0001 ás 12:00:12</span>
+                                <strong style="color: #808080;">Ultimo login</strong>
+                                <span>01/01/0001 ás 12:00:12</span>
                             </div>
                             <div class="bloco-contacriada">
-                                <strong>Conta criada:</strong>
-                                <span style="margin-left: 2%;">01/01/0001 ás 12:00:12</span>
+                                <strong style="color: #808080;">Conta criada</strong>
+                                <span>01/01/0001 ás 12:00:12</span>
                             </div>
                             <div class="bloco-ultimaalteracao">
-                                <strong>Ultima alteração:</strong>
-                                <span style="margin-left: 2%;">01/01/0001 ás 12:00:12</span>
+                                <strong style="color: #808080;">Ultima alteração</strong>
+                                <span>01/01/0001 ás 12:00:12</span>
                             </div>
                             <div class="bloco-excluirconta">
                                 <button class="btn-excluir">
