subindo tela fazer-avaliacao

--- a/Sistema/Interface/Pages/PagesUsuario/Feedback/feedback.html
+++ b/Sistema/Interface/Pages/PagesUsuario/Feedback/feedback.html
@@ -41,7 +41,7 @@
                                 <a href="#" class="evento">Minhas avaliações</a>
                             </div>
                             <div class="bloco-button">
-                                <a href="#" class="evento">Fazer avaliação</a>
+                                <a href="../FazerAvaliacao/avaliacao.html" class="evento">Fazer avaliação</a>
                             </div>
                             <div class="bloco-button">
                                 <a href="#" class="evento">Ver avaliações</a>
